# vxlstudio

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
3rds/: README.md
3rds/asvoxel_sdk/: README.md
cmake/: VxlStudioConfig.cmake.in
core/: CMakeLists.txt
core/include/vxl/: audit.h  calibration.h  camera.h  camera_manager.h  compute.h  core.h  device.h  error.h  export.h  guidance.h  height_map.h  inference.h  inspector_2d.h  inspector_3d.h  io.h  log.h  message_bus.h  pipeline.h  plugin_api.h  point_cloud.h  recipe.h  reconstruct.h  result.h  transport.h  types.h  visual_ai.h  vlm.h
core/src/: core.cpp  error.cpp  message_bus.cpp  types.cpp
core/src/audit/: audit_log.cpp  user_manager.cpp
core/src/calibration/: calibration.cpp  stereo_calibrator.cpp
core/src/camera/: asvoxel_camera.cpp  asvoxel_camera.h  camera_factory.cpp  camera_manager.cpp  sim_camera.cpp  sim_camera.h
core/src/compute/: compute_manager.cpp  cpu_engine.cpp  cpu_engine.h  cuda_engine.cpp  cuda_engine.h  metal_engine.cpp  metal_engine.h
core/src/compute/kernels/: README.md  phase_shift.cu  phase_shift.metal  phase_unwrap.cu
core/src/guidance/: guidance_engine.cpp
core/src/height_map/: height_map.cpp
core/src/inference/: inference.cpp
core/src/inspector_2d/: anomaly_detect.cpp  blob_analysis.cpp  edge_detect.cpp  inspector_2d.cpp  ocr.cpp  template_match.cpp  visual_ai_ops.cpp
core/src/inspector_3d/: coplanarity.cpp  defect_cluster.cpp  flatness.cpp  height_measure.cpp  height_threshold.cpp  inspector_3d.cpp  ref_plane_fit.cpp  template_compare.cpp
core/src/io/: io_manager.cpp  modbus_io.cpp  modbus_io.h  serial_io.cpp  serial_io.h  sim_io.cpp  sim_io.h
core/src/log/: log.cpp
core/src/pipeline/: pipeline.cpp
core/src/plugin/: plugin_manager.cpp
core/src/point_cloud/: point_cloud.cpp
core/src/recipe/: recipe.cpp
core/src/reconstruct/: depth_direct.cpp  depth_direct.h  height_map_gen.cpp  height_map_gen.h  phase_shift.cpp  phase_shift.h  phase_unwrap.cpp  phase_unwrap.h  post_process.cpp  post_process.h  reconstruct.cpp  stereo_match.cpp  stereo_match.h  triangulation.cpp  triangulation.h
core/src/result/: result.cpp
core/src/transport/: protocol.h  transport_client.cpp  transport_server.cpp
core/src/visual_ai/: anomalib_detector.cpp  model_registry.cpp  yolo_classifier.cpp  yolo_common.h  yolo_detector.cpp  yolo_segmenter.cpp
core/src/vlm/: base64.cpp  base64.h  vlm_assistant.cpp
core/tests/: CMakeLists.txt  test_audit.cpp  test_calibration.cpp  test_camera_sim.cpp  test_compute.cpp  test_depth_providers.cpp  test_edge_cases.cpp  test_guidance.cpp  test_height_map.cpp  test_inference.cpp  test_inspector_2d.cpp  test_inspector_3d.cpp  test_io.cpp  test_log.cpp  test_multi_camera.cpp  test_pipeline.cpp  test_plugin.cpp  test_point_cloud.cpp  test_recipe.cpp  test_reconstruct.cpp  test_stereo_calibrator.cpp  test_transport.cpp  test_visual_ai.cpp  test_vlm.cpp
demo/: app.py  main.py
demo/resources/: styles.qss
demo/views/: calibration_wizard.py  engineering_view.py  main_window.py  run_view.py
demo/widgets/: camera_panel.py  height_map_viewer.py  image_viewer.py  log_panel.py  param_panel.py  result_table.py  roi_editor.py  stats_panel.py
demo/workers/: capture_worker.py  process_worker.py
docs/: README_zh.md
docs/archive/: README.md  architecture-comparison.md  product-design-claude-v0.1.md  product-design-unified-v0.2.md  product-design-v0.1.md
docs/design/: README.md  architecture.md  core.md  demo.md  phase3-decisions.md  phase3-plan.md  recipe-schema.md  roadmap.md  studio.md  threading.md  vxlapp.md
plugins/builtin/sample_plugin/: CMakeLists.txt  sample_plugin.cpp
python/: CMakeLists.txt
python/bindings/: bind_audit.cpp  bind_calibration.cpp  bind_camera.cpp  bind_error.cpp  bind_guidance.cpp  bind_height_map.cpp  bind_inference.cpp  bind_inspector.cpp  bind_inspector_2d.cpp  bind_io.cpp  bind_log.cpp  bind_message_bus.cpp  bind_pipeline.cpp  bind_plugin.cpp  bind_point_cloud.cpp  bind_recipe.cpp  bind_reconstruct.cpp  bind_transport.cpp  bind_types.cpp  bind_visual_ai.cpp  bind_vlm.cpp  module.cpp
python/examples/: full_pipeline.py  recipe_demo.py
python/tests/: test_bindings.py
python/vxl/: __init__.py  utils.py  vlm_utils.py
recipes/: pipeline_pcb.json
recipes/pcb_smt/: pcb_model_a.json
scripts/: clean_pub_repo.sh  publish_opensource.sh
tools/: download_anomaly_model.py  download_yolo_model.py  vxap_pack.py
vxlapp/: README.md  __init__.py  gui_runner.py  headless_runner.py  main.py  vxap_loader.py
vxlapp/examples/: README.md  pcb_demo.vxap
vxlapp/examples/pcb_demo/: manifest.json  pipeline.json
